--- a/test.config.server/src/main/resources/application-local.yml
+++ b/test.config.server/src/main/resources/application-local.yml
@@ -4,5 +4,5 @@ spring:
     config:
       server:
         git:
-          uri: file:///Users/georgezeng/work/git/private/test-cloud/test-config
+          uri: file:///Users/georgezeng/work/git/private/spring-cloud-test/test.config.files
           default-label: ${configBranch:development}
