--- a/test.config.server/src/main/resources/application.yml
+++ b/test.config.server/src/main/resources/application.yml
@@ -8,3 +8,6 @@ spring:
           search-paths:
           - /test.config.files
           default-label: ${configBranch:master}
+  profiles:
+    active:
+    - local
