--- a/test.config.files/application-base.yml
+++ b/test.config.files/application-base.yml
@@ -1,9 +1,9 @@
 management.security.enabled: false
 spring:
   rabbitmq:
-    host: localhost
+    host: rabbitmq
     port: 5672
-    username: guest
-    password: guest
+    username: admin
+    password: geozen
   sleuth.sampler.percentage: 1
   zipkin.sender.type: rabbit
