--- a/test.admin/src/main/resources/bootstrap.yml
+++ b/test.admin/src/main/resources/bootstrap.yml
@@ -1,1 +1,9 @@
 spring.application.name: admin
+spring:
+  profiles:
+    active:
+    - base
+    - server
+  cloud:
+    config:
+     uri: http://config:8888
