--- a/test.gateway/src/main/resources/bootstrap.yml
+++ b/test.gateway/src/main/resources/bootstrap.yml
@@ -3,4 +3,13 @@ spring:
   profiles:
     active:
     - base
-    - local
+    - server
+    
+  cloud:
+    config:
+     uri: http://config:8888
+     
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://registry:8761/eureka/
