--- a/test.registry/src/main/resources/bootstrap.yml
+++ b/test.registry/src/main/resources/bootstrap.yml
@@ -1,6 +1,30 @@
-spring.application.name: registry
 spring:
   profiles:
     active:
     - base
-    - local
+    - server
+  cloud:
+    config:
+     uri: http://config:8888
+     
+---
+spring.application.name: registry1
+spring:
+  profiles: registry1
+eureka:
+  instance:
+    hostname: registry1
+  client:
+    serviceUrl:
+      defaultZone: http://registry2/eureka/
+
+---
+spring.application.name: registry2
+spring:
+  profiles: registry2
+eureka:
+  instance:
+    hostname: registry2
+  client:
+    serviceUrl:
+      defaultZone: http://registry1/eureka/
