--- a/test.gateway/src/main/resources/bootstrap.yml
+++ b/test.gateway/src/main/resources/bootstrap.yml
@@ -12,4 +12,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://registry:8761/eureka/
+      defaultZone: http://registry1/eureka/,http://registry2/eureka/
