--- a/test.service1/src/main/resources/bootstrap.yml
+++ b/test.service1/src/main/resources/bootstrap.yml
@@ -7,3 +7,8 @@ spring:
   cloud:
     config:
      uri: http://config:8888
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://registry1/eureka/,http://registry2/eureka/
