--- a/test.service2/src/main/resources/bootstrap.yml
+++ b/test.service2/src/main/resources/bootstrap.yml
@@ -7,7 +7,8 @@ spring:
   cloud:
     config:
      uri: http://config:8888
+
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://registry:8761/eureka/
+      defaultZone: http://registry1/eureka/,http://registry2/eureka/
