--- a/test.service1/src/main/resources/bootstrap.yml
+++ b/test.service1/src/main/resources/bootstrap.yml
@@ -8,3 +8,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://registry:8761/eureka/#http://registry1:8761/eureka/,http://registry2:8761/eureka/
+      
+zuul:
+  host:
+    connect-timeout-millis: 20000
+    socket-timeout-millis: 20000
