--- a/test.config.files/application-base.yml
+++ b/test.config.files/application-base.yml
@@ -7,3 +7,7 @@ spring:
   session.store-type: redis
   
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
+
+ribbon:
+  ReadTimeout: 20000
+  ConnectTimeout: 20000
