--- a/test.service2/src/main/resources/bootstrap.yml
+++ b/test.service2/src/main/resources/bootstrap.yml
@@ -7,4 +7,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://registry:8761/eureka/#http://registry1:8761/eureka/,http://registry2:8761/eureka/
+      defaultZone: http://registry1:8761/eureka/,http://registry2:8761/eureka/
