--- a/test.service1/pom.xml
+++ b/test.service1/pom.xml
@@ -10,4 +10,16 @@
 		<relativePath>../test.setting.service</relativePath>
 	</parent>
 
+	<dependencies>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+	</dependencies>
 </project>
