--- a/test.setting.base/pom.xml
+++ b/test.setting.base/pom.xml
@@ -33,9 +33,19 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+		<dependency>
 			<groupId>net.logstash.logback</groupId>
 			<artifactId>logstash-logback-encoder</artifactId>
-			<version>4.8</version>
+			<version>5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.geozen.cloud</groupId>
