--- a/test.setting.base/pom.xml
+++ b/test.setting.base/pom.xml
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>com.github.danielwegener</groupId>
 			<artifactId>logback-kafka-appender</artifactId>
-			<version>0.1.0</version>
+			<version>0.2.0-RC1</version>
 			<scope>runtime</scope>
 		</dependency>
 		
