--- a/test.service1/pom.xml
+++ b/test.service1/pom.xml
@@ -9,5 +9,22 @@
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../test.setting.service</relativePath>
 	</parent>
-
+	
+	<profiles>
+		<profile>
+			<id>server</id>
+			<dependencies>
+				<dependency>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-classic</artifactId>
+					<version>${logback.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-core</artifactId>
+					<version>${logback.version}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
