--- a/test.service1/pom.xml
+++ b/test.service1/pom.xml
@@ -13,6 +13,9 @@
 	<profiles>
 		<profile>
 			<id>server</id>
+			<properties>
+				<logback.version>1.2.3</logback.version>
+			</properties>
 			<dependencies>
 				<dependency>
 					<groupId>ch.qos.logback</groupId>
