--- a/test.service2/pom.xml
+++ b/test.service2/pom.xml
@@ -10,4 +10,24 @@
 		<relativePath>../test.setting.service</relativePath>
 	</parent>
 
+	<profiles>
+		<profile>
+			<id>server</id>
+			<properties>
+				<logback.version>1.2.3</logback.version>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-classic</artifactId>
+					<version>${logback.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-core</artifactId>
+					<version>${logback.version}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
